logo path changed

--- a/lib/jsdoc3/templates/default/tmpl/layout.tmpl
+++ b/lib/jsdoc3/templates/default/tmpl/layout.tmpl
@@ -32,7 +32,7 @@
 
 <div class="gridContainer clearfix">
   <header id="header" class="fluid">
-    <figure id="logo" class="fluid"> <a href="../../index"><img src="images/logo.jpg"  alt="SocialByWay" title="SocialByWay"/></a> </figure>
+    <figure id="logo" class="fluid"> <a href="../../index"><img src="styles/images/logo.jpg"  alt="SocialByWay" title="SocialByWay"/></a> </figure>
     <div id="header-links-container" class="fluid">
 
 	<div class="center">
