--- a/app/assets/stylesheets/default/comment.scss
+++ b/app/assets/stylesheets/default/comment.scss
@@ -22,22 +22,28 @@
     background: #eee;
  }
   .action-container{
+    border: 1px solid rgb(204, 191, 191);
+    background: #fff;
+    padding-left: 5px;
     textarea{
       resize: none;
+      outline: none;
       margin-right: 0px;
-      border: 1px solid rgb(204, 191, 191);
       border-right: none;
-      padding-left: 5px;
       margin-top: 2px;
+      width: 67%;
+      border: none;
+      padding: 0;
     }
     .post-comment{
-      padding: 10px 40px;
+      padding: 10px;
       color: #ff417e;
-      border: 1px solid #ddd;
       background: #f5f5f5;
       float: right;
       margin-left: 0px;
       margin-top: 2px;
+      width: 33%;
+      border: none;
     }
   }
 }
